user profile section integration

--- a/client/templates/change_password.html
+++ b/client/templates/change_password.html
@@ -9,6 +9,7 @@
   </ion-header-bar>
   <ion-content>
     <div class="full_back suggest reviews">
+      <form name="Form" ng-submit="password.update(Form)">
       <div class="row">
         <div class="col">
           <div class="review-form edit-profile">
@@ -16,26 +17,27 @@
               <label class="item-input item-floating-label">
                 <span class="icon-top user change-pass"><img src="./key.png" alt="" ></span>
                 <span class="icon-wrap">
-                  <input type="text" placeholder="Current Password">
+                  <input type="password" placeholder="Current Password" ng-model="password.formData.curr_passwd" required-error-message="This field is required!" validator="required, passwdValidator">
                 </span>
               </label>
               <label class="item-input item-floating-label">
                 <span class="icon-top user change-pass"><img src="./key.png" alt="" ></span>
                 <span class="icon-wrap">
-                  <input type="text" placeholder="New Password">
+                  <input type="password" placeholder="New Password" ng-model="password.formData.new_passwd" required-error-message="This field is required!" validator="required, passwdValidator">
                 </span>
               </label>
               <label class="item-input item-floating-label">
                 <span class="icon-top user change-pass"><img src="./key.png" alt="" ></span>
                 <span class="icon-wrap">
-                  <input type="text" placeholder="Confirm New Password">
+                  <input type="password" placeholder="Confirm New Password" ng-model="password.formData.repeat_passwd" required-error-message="This field is required!" validator="required, confirmPasswd">
                 </span>
               </label>
             </div>
           </div>
         </div>
       </div>
-      <a href="javascript:void(0)" class="next-btn">Update</a>
+      <a href="javascript:void(0)" class="next-btn" ng-click="password.update(Form)">Update</a>
+      </form>
     </div>
   </ion-content>  
 </ion-view>
